# credit-facility-rs

./: .gitignore  Cargo.toml  README.md  financial-terms.md
examples/: 00_quick_start.rs  01_basic_usage.rs  02_time_control.rs  03_facility_types.rs  04_shared_time.rs  05_json_state.rs  06_lifecycle.rs  07_bitcoin_loan.rs  08_revolving_credit.rs  09_overdraft.rs  10_status_test.rs  EXAMPLES_STATUS.md  README.md
src/: config.rs  decimal.rs  errors.rs  events.rs  facility.rs  lib.rs  state.rs  types.rs
src/collateral/: bitcoin.rs  liquidation.rs  ltv.rs  mod.rs
src/facilities/: mod.rs  open_term.rs  overdraft.rs  revolving.rs  serialization.rs  term_loan.rs
src/interest/: accrual.rs  compound.rs  mod.rs  penalty.rs
src/payments/: amortization.rs  mod.rs  overpayment.rs  waterfall.rs
